
[tool.poetry]
name = "lariskursibot"
version = "0.1.0"
description = ""
authors = ["Nodar Kasradze <nod32arai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.4.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"
zeep = "^4.2.1"
python-telegram-bot = "^21.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311", "py312"]
line-length = 80

[tool.flake8]
max-line-length = 80
extend-ignore = "E203,E701"

[tool.isort]
profile = "black"
line-length = 80